// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:tabsTransfer 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="a"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          组合穿梭器
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TabsTransferControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Transfer __PRISMUI_COMPONENT_CLASS_PREFIX__TabsTransfer"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Transfer-select"
                      >
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs __PRISMUI_COMPONENT_CLASS_PREFIX__Tabs--line __PRISMUI_COMPONENT_CLASS_PREFIX__TabsTransfer-tabs"
                          data-role="container"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-wrapper"
                          >
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-linksContainer"
                            >
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-main"
                              >
                                <ul
                                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-links"
                                  role="tablist"
                                >
                                  <li
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-link is-active __PRISMUI_COMPONENT_CLASS_PREFIX__TabsTransfer-tab"
                                  >
                                    <a
                                      title="成员"
                                    >
                                      <span
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                                      >
                                        成员
                                      </span>
                                    </a>
                                  </li>
                                  <li
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-link __PRISMUI_COMPONENT_CLASS_PREFIX__TabsTransfer-tab"
                                  >
                                    <a
                                      title="用户"
                                    >
                                      <span
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                                      >
                                        用户
                                      </span>
                                    </a>
                                  </li>
                                </ul>
                              </div>
                            </div>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-content"
                          >
                            <div
                              class="in is-active __PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-pane __PRISMUI_COMPONENT_CLASS_PREFIX__TabsTransfer-tab"
                            >
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TabsTransfer-search"
                              >
                                <div
                                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__InputBox"
                                >
                                  <input
                                    placeholder="请输入关键字"
                                    size="12"
                                    theme="cxd"
                                    type="text"
                                    value=""
                                  />
                                  <icon-mock
                                    class="icon icon-search"
                                    icon="search"
                                  />
                                </div>
                              </div>
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree __PRISMUI_COMPONENT_CLASS_PREFIX__Transfer-checkboxes"
                              >
                                <ul
                                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-list"
                                >
                                  <li
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item"
                                    style="--Tree-depth: 0;"
                                  >
                                    <div
                                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                                    >
                                      <div
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrow"
                                      >
                                        <icon-mock
                                          class="icon icon-down-arrow-bold"
                                          icon="down-arrow-bold"
                                        />
                                      </div>
                                      <label
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                                        data-role="checkbox"
                                      >
                                        <input
                                          type="checkbox"
                                        />
                                        <i>
                                          <div
                                            class="checkbox-icon icon"
                                          />
                                        </i>
                                        <span
                                          class=""
                                        />
                                      </label>
                                      <div
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                                      >
                                        <span
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                          title="法师"
                                        >
                                          法师
                                        </span>
                                        <div
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                                        />
                                      </div>
                                    </div>
                                  </li>
                                  <li
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                                    style="--Tree-depth: 1;"
                                  >
                                    <div
                                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                                    >
                                      <span
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                                      />
                                      <label
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                                        data-role="checkbox"
                                      >
                                        <input
                                          type="checkbox"
                                        />
                                        <i>
                                          <div
                                            class="checkbox-icon icon"
                                          />
                                        </i>
                                        <span
                                          class=""
                                        />
                                      </label>
                                      <div
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                                      >
                                        <span
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                          title="诸葛亮"
                                        >
                                          诸葛亮
                                        </span>
                                        <div
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                                        />
                                      </div>
                                    </div>
                                  </li>
                                  <li
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item"
                                    style="--Tree-depth: 0;"
                                  >
                                    <div
                                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                                    >
                                      <div
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrow"
                                      >
                                        <icon-mock
                                          class="icon icon-down-arrow-bold"
                                          icon="down-arrow-bold"
                                        />
                                      </div>
                                      <label
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                                        data-role="checkbox"
                                      >
                                        <input
                                          type="checkbox"
                                        />
                                        <i>
                                          <div
                                            class="checkbox-icon icon"
                                          />
                                        </i>
                                        <span
                                          class=""
                                        />
                                      </label>
                                      <div
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                                      >
                                        <span
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                          title="战士"
                                        >
                                          战士
                                        </span>
                                        <div
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                                        />
                                      </div>
                                    </div>
                                  </li>
                                  <li
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                                    style="--Tree-depth: 1;"
                                  >
                                    <div
                                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                                    >
                                      <span
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                                      />
                                      <label
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                                        data-role="checkbox"
                                      >
                                        <input
                                          type="checkbox"
                                        />
                                        <i>
                                          <div
                                            class="checkbox-icon icon"
                                          />
                                        </i>
                                        <span
                                          class=""
                                        />
                                      </label>
                                      <div
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                                      >
                                        <span
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                          title="曹操"
                                        >
                                          曹操
                                        </span>
                                        <div
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                                        />
                                      </div>
                                    </div>
                                  </li>
                                  <li
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                                    style="--Tree-depth: 1;"
                                  >
                                    <div
                                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                                    >
                                      <span
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                                      />
                                      <label
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                                        data-role="checkbox"
                                      >
                                        <input
                                          type="checkbox"
                                        />
                                        <i>
                                          <div
                                            class="checkbox-icon icon"
                                          />
                                        </i>
                                        <span
                                          class=""
                                        />
                                      </label>
                                      <div
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                                      >
                                        <span
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                          title="钟无艳"
                                        >
                                          钟无艳
                                        </span>
                                        <div
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                                        />
                                      </div>
                                    </div>
                                  </li>
                                  <li
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item"
                                    style="--Tree-depth: 0;"
                                  >
                                    <div
                                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                                    >
                                      <div
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrow"
                                      >
                                        <icon-mock
                                          class="icon icon-down-arrow-bold"
                                          icon="down-arrow-bold"
                                        />
                                      </div>
                                      <label
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                                        data-role="checkbox"
                                      >
                                        <input
                                          type="checkbox"
                                        />
                                        <i>
                                          <div
                                            class="checkbox-icon icon"
                                          />
                                        </i>
                                        <span
                                          class=""
                                        />
                                      </label>
                                      <div
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                                      >
                                        <span
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                          title="打野"
                                        >
                                          打野
                                        </span>
                                        <div
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                                        />
                                      </div>
                                    </div>
                                  </li>
                                  <li
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                                    style="--Tree-depth: 1;"
                                  >
                                    <div
                                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                                    >
                                      <span
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                                      />
                                      <label
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                                        data-role="checkbox"
                                      >
                                        <input
                                          type="checkbox"
                                        />
                                        <i>
                                          <div
                                            class="checkbox-icon icon"
                                          />
                                        </i>
                                        <span
                                          class=""
                                        />
                                      </label>
                                      <div
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                                      >
                                        <span
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                          title="李白"
                                        >
                                          李白
                                        </span>
                                        <div
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                                        />
                                      </div>
                                    </div>
                                  </li>
                                  <li
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                                    style="--Tree-depth: 1;"
                                  >
                                    <div
                                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                                    >
                                      <span
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                                      />
                                      <label
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                                        data-role="checkbox"
                                      >
                                        <input
                                          type="checkbox"
                                        />
                                        <i>
                                          <div
                                            class="checkbox-icon icon"
                                          />
                                        </i>
                                        <span
                                          class=""
                                        />
                                      </label>
                                      <div
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                                      >
                                        <span
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                          title="韩信"
                                        >
                                          韩信
                                        </span>
                                        <div
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                                        />
                                      </div>
                                    </div>
                                  </li>
                                  <li
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                                    style="--Tree-depth: 1;"
                                  >
                                    <div
                                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                                    >
                                      <span
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                                      />
                                      <label
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--checkbox--default __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--sm"
                                        data-role="checkbox"
                                      >
                                        <input
                                          type="checkbox"
                                        />
                                        <i>
                                          <div
                                            class="checkbox-icon icon"
                                          />
                                        </i>
                                        <span
                                          class=""
                                        />
                                      </label>
                                      <div
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                                      >
                                        <span
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                          title="云中君"
                                        >
                                          云中君
                                        </span>
                                        <div
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                                        />
                                      </div>
                                    </div>
                                  </li>
                                </ul>
                              </div>
                            </div>
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-pane __PRISMUI_COMPONENT_CLASS_PREFIX__TabsTransfer-tab"
                            >
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ChainedSelection __PRISMUI_COMPONENT_CLASS_PREFIX__Transfer-checkboxes"
                              >
                                <div
                                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__ChainedSelection-col"
                                >
                                  <div
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__ChainedSelection-item"
                                  >
                                    <div
                                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__ChainedSelection-itemLabel"
                                    >
                                      <span
                                        class=" __PRISMUI_COMPONENT_CLASS_PREFIX__Selection-ellipsis-line"
                                        title="法师2 "
                                      >
                                        法师2
                                      </span>
                                    </div>
                                  </div>
                                  <div
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__ChainedSelection-item"
                                  >
                                    <div
                                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__ChainedSelection-itemLabel"
                                    >
                                      <span
                                        class=" __PRISMUI_COMPONENT_CLASS_PREFIX__Selection-ellipsis-line"
                                        title="战士2 "
                                      >
                                        战士2
                                      </span>
                                    </div>
                                  </div>
                                  <div
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__ChainedSelection-item"
                                  >
                                    <div
                                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__ChainedSelection-itemLabel"
                                    >
                                      <span
                                        class=" __PRISMUI_COMPONENT_CLASS_PREFIX__Selection-ellipsis-line"
                                        title="打野2 "
                                      >
                                        打野2
                                      </span>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__ChainedSelection-col"
                                >
                                  <div
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__ChainedSelection-placeholder"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Transfer-mid"
                      />
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Transfer-result"
                      >
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Transfer-title"
                        >
                          <span>
                            已选项
                          </span>
                          <a
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Transfer-clearAll is-disabled"
                          >
                            清空
                          </a>
                        </div>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Selections __PRISMUI_COMPONENT_CLASS_PREFIX__Transfer-value"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Selections-placeholder"
                          >
                            请选择左侧数据
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    submitText
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:tabsTransfer with deferApi 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="a"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          组合穿梭器
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__TabsTransferControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Transfer __PRISMUI_COMPONENT_CLASS_PREFIX__TabsTransfer"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Transfer-select"
                      >
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs __PRISMUI_COMPONENT_CLASS_PREFIX__Tabs--line __PRISMUI_COMPONENT_CLASS_PREFIX__TabsTransfer-tabs"
                          data-role="container"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-wrapper"
                          >
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-linksContainer"
                            >
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-linksContainer-main"
                              >
                                <ul
                                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-links"
                                  role="tablist"
                                >
                                  <li
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-link is-active __PRISMUI_COMPONENT_CLASS_PREFIX__TabsTransfer-tab"
                                  >
                                    <a
                                      title="成员"
                                    >
                                      <span
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                                      >
                                        成员
                                      </span>
                                    </a>
                                  </li>
                                  <li
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-link __PRISMUI_COMPONENT_CLASS_PREFIX__TabsTransfer-tab"
                                  >
                                    <a
                                      title="用户"
                                    >
                                      <span
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-link-text"
                                      >
                                        用户
                                      </span>
                                    </a>
                                  </li>
                                </ul>
                              </div>
                            </div>
                          </div>
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-content"
                          >
                            <div
                              class="in is-active __PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-pane __PRISMUI_COMPONENT_CLASS_PREFIX__TabsTransfer-tab"
                            >
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TabsTransfer-search"
                              >
                                <div
                                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__InputBox"
                                >
                                  <input
                                    placeholder="请输入关键字"
                                    size="12"
                                    theme="cxd"
                                    type="text"
                                    value=""
                                  />
                                  <icon-mock
                                    class="icon icon-search"
                                    icon="search"
                                  />
                                </div>
                              </div>
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__AssociatedSelection __PRISMUI_COMPONENT_CLASS_PREFIX__Transfer-checkboxes"
                              >
                                <div
                                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__AssociatedSelection-left"
                                >
                                  <div
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree"
                                  >
                                    <ul
                                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-list"
                                    >
                                      <li
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item"
                                        style="--Tree-depth: 0;"
                                      >
                                        <div
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                                        >
                                          <div
                                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrow"
                                          >
                                            <icon-mock
                                              class="icon icon-down-arrow-bold"
                                              icon="down-arrow-bold"
                                            />
                                          </div>
                                          <div
                                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                                          >
                                            <i
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-folderIcon"
                                            >
                                              <icon-mock
                                                class="icon icon-folder"
                                                icon="folder"
                                              />
                                            </i>
                                            <span
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                              title="DEFER"
                                            >
                                              DEFER
                                            </span>
                                            <div
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                                            />
                                          </div>
                                        </div>
                                      </li>
                                      <li
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                                        style="--Tree-depth: 1;"
                                      >
                                        <div
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                                        >
                                          <span
                                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                                          />
                                          <div
                                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                                          >
                                            <i
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                                            >
                                              <icon-mock
                                                class="icon icon-file"
                                                icon="file"
                                              />
                                            </i>
                                            <span
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                              title="Option A"
                                            >
                                              Option A
                                            </span>
                                            <div
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                                            />
                                          </div>
                                        </div>
                                      </li>
                                      <li
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                                        style="--Tree-depth: 1;"
                                      >
                                        <div
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel is-checked"
                                        >
                                          <span
                                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                                          />
                                          <div
                                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                                          >
                                            <i
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                                            >
                                              <icon-mock
                                                class="icon icon-file"
                                                icon="file"
                                              />
                                            </i>
                                            <span
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                              title="Option B"
                                            >
                                              Option B
                                            </span>
                                            <div
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                                            />
                                          </div>
                                        </div>
                                      </li>
                                      <li
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                                        style="--Tree-depth: 1;"
                                      >
                                        <div
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                                        >
                                          <span
                                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                                          />
                                          <div
                                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                                          >
                                            <i
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                                            >
                                              <icon-mock
                                                class="icon icon-file"
                                                icon="file"
                                              />
                                            </i>
                                            <span
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                              title="Option C"
                                            >
                                              Option C
                                            </span>
                                            <div
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                                            />
                                          </div>
                                        </div>
                                      </li>
                                      <li
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                                        style="--Tree-depth: 1;"
                                      >
                                        <div
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                                        >
                                          <span
                                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                                          />
                                          <div
                                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                                          >
                                            <i
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                                            >
                                              <icon-mock
                                                class="icon icon-file"
                                                icon="file"
                                              />
                                            </i>
                                            <span
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                              title="Option D"
                                            >
                                              Option D
                                            </span>
                                            <div
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                                            />
                                          </div>
                                        </div>
                                      </li>
                                      <li
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf is-child"
                                        style="--Tree-depth: 1;"
                                      >
                                        <div
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                                        >
                                          <span
                                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                                          />
                                          <div
                                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                                          >
                                            <i
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                                            >
                                              <icon-mock
                                                class="icon icon-file"
                                                icon="file"
                                              />
                                            </i>
                                            <span
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                              title="Option E"
                                            >
                                              Option E
                                            </span>
                                            <div
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                                            />
                                          </div>
                                        </div>
                                      </li>
                                      <li
                                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item--isLeaf"
                                        style="--Tree-depth: 0;"
                                      >
                                        <div
                                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel"
                                        >
                                          <span
                                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemArrowPlaceholder"
                                          />
                                          <div
                                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemLabel-item"
                                          >
                                            <i
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemIcon __PRISMUI_COMPONENT_CLASS_PREFIX__Tree-leafIcon"
                                            >
                                              <icon-mock
                                                class="icon icon-file"
                                                icon="file"
                                              />
                                            </i>
                                            <span
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-itemText"
                                              title="法师"
                                            >
                                              法师
                                            </span>
                                            <div
                                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tree-item-icons"
                                            />
                                          </div>
                                        </div>
                                      </li>
                                    </ul>
                                  </div>
                                </div>
                                <div
                                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__AssociatedSelection-right"
                                >
                                  <div
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__AssociatedSelection-box"
                                  >
                                    <div
                                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__AssociatedSelection-reload is-clickable"
                                    >
                                      <icon-mock
                                        class="icon icon-reload"
                                        icon="reload"
                                      />
                                    </div>
                                    <p>
                                      点击刷新重新加载
                                    </p>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div
                              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Tabs-pane __PRISMUI_COMPONENT_CLASS_PREFIX__TabsTransfer-tab"
                            >
                              <div
                                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ChainedSelection __PRISMUI_COMPONENT_CLASS_PREFIX__Transfer-checkboxes"
                              >
                                <div
                                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__ChainedSelection-col"
                                >
                                  <div
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__ChainedSelection-item"
                                  >
                                    <div
                                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__ChainedSelection-itemLabel"
                                    >
                                      <span
                                        class=" __PRISMUI_COMPONENT_CLASS_PREFIX__Selection-ellipsis-line"
                                        title="法师2 "
                                      >
                                        法师2
                                      </span>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__ChainedSelection-col"
                                >
                                  <div
                                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__ChainedSelection-placeholder"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Transfer-mid"
                      />
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Transfer-result"
                      >
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Transfer-title"
                        >
                          <span>
                            已选项
                          </span>
                          <a
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Transfer-clearAll is-disabled"
                          >
                            清空
                          </a>
                        </div>
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Selections __PRISMUI_COMPONENT_CLASS_PREFIX__Transfer-value"
                        >
                          <div
                            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Selections-placeholder"
                          >
                            请选择左侧数据
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    submitText
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
